--- a/files/style/faith.css
+++ b/files/style/faith.css
@@ -1,43 +1,167 @@
-body{
-    background-color: whitesmoke
+
+
+@media print{
+    img{
+        visibility: hidden;
+    }
+
+    h2::before{
+        content: "these are the different ";
+    }
 }
 
-h1{
-    font-family: serif;
-    font-size: xx-large;
-    text-transform: uppercase;
-    text-transform: capitalize;
-    text-align: center;
-    font-style: normal;
-}
-.part2 section,.part3 section{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-} 
-figure{
-    border: 5px groove orange;
+@media print and (orientation:landscape){
+    img{
+        visibility: visible;
+    }
 
+    h2::before{
+        color: blue;
+        content: "here are some ";
+    }
 }
-    figcaption{
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+@media (max-width: 1400px){
+
+    body{
+        background-color: whitesmoke
+    }
+
+    h1{
+        font-family: serif;
+        font-size: xx-large;
         text-transform: uppercase;
         text-align: center;
-        font-size: larger;
+        font-style: normal;
     }
-    figure img{
-        margin-left:20%;
+    .part2 section,.part3 section{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    } 
+    figure{
+        border: 5px groove orange;
+
     }
-h2{
-    text-align: center;
-    font-size: large;
-    font-family: serif;
-    text-transform: uppercase;
-}
-h1{
-    font-style: italic;
-    text-align: center;
-    text-transform: capitalize;
-    background-color: orange;
+        figcaption{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: larger;
+        }
+        figure img{
+            margin-left:20%;
+        }
+    h2{
+        text-align: center;
+        font-size: large;
+        font-family: serif;
+        text-transform: uppercase;
+    }
+    h1{
+        font-style: italic;
+        text-align: center;
+        background-color: orange;
+    }
 }
 
 
+@media (max-width: 1100px){
+
+    body{
+        background-color: whitesmoke
+    }
+
+    h1{
+        font-family: serif;
+        font-size: xx-large;
+        text-transform: capitalize;
+        text-align: center;
+        font-style: normal;
+    }
+    .part2 section,.part3 section{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    } 
+    figure{
+        border: 5px groove salmon;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    } 
+
+        figcaption{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: larger;
+        }
+        figure img{
+            margin-left:1%;
+        }
+    h2{
+        text-align: center;
+        font-size: large;
+        font-family: serif;
+        text-transform: uppercase;
+    }
+    h1{
+        font-style: italic;
+        text-align: center;
+        text-transform: capitalize;
+    }
+
+    figure:hover{
+        border-image-source: url(../images/mouse2.jpg);
+        border-image-width: 2em;
+        border-image-slice: fill;
+    }
+
+}
+
+@media (max-width: 768px){
+
+    body{
+        background-color: whitesmoke
+    }
+
+    h1{
+        font-family: serif;
+        font-size: xx-large;
+        text-transform: capitalize;
+        text-align: center;
+        font-style: normal;
+    }
+    .part2 section,.part3 section{
+        display: grid;
+        grid-template-columns: repeat(1, 100%);
+    } 
+    figure{
+        border: 5px groove salmon;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    } 
+
+    }
+        figcaption{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: larger;
+        }
+        figure img{
+            margin-left:1%;
+        }
+    h2{
+        text-align: center;
+        font-size: large;
+        font-family: serif;
+        text-transform: uppercase;
+    }
+    h1{
+        font-style: italic;
+        text-align: center;
+        text-transform: capitalize;
+        background-color: orange;
+    }
+
+
+}
