--- a/files/style/grid.css
+++ b/files/style/grid.css
@@ -1,39 +1,56 @@
-main{
-    display: grid;
+
+@media (max-width: 1400px){
+
+
+    body{
+        max-width: 70%;
+        margin: 0 auto;
+    }
+    main{
+        display: grid;
     grid-template-columns: repeat( 3, 1fr);
-     grid-template-rows: repeat( 6, 20% 20% 30% 20% 20% 30%); 
+    grid-template-rows: repeat( 6, 20% 20% 30% 20% 20% 30%); 
 }
 section{
     border: 5px ridge red;
-
+    
 }
 .part1{ 
     grid-area: 1/1/4/3;
-
-}
+    background-image: url(../images/homepage3.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+} 
 .part2{
     grid-area: 6/1/7/4;
+    background-image: url(../images/homepage2.jpeg)
 }
 .part3{
     grid-area: 5/1/6/2;
 }
 .part4{
     grid-area: 4/2/5/4;
+    background-image: url(../images/home4.jpeg);
 }
 .part5{
     grid-area: 2/3/3/4;
+    background-image: url(../images/home4.jpeg);
 }
 .part6{
     grid-area: 1/3/2/4;
+    background-image: url(../images/home5.jpeg);
 }
 .part7{
     grid-area: 3/3/4/4;
+    background-image: url(../images/home6.jpeg);
 }
 .part8{
     grid-area: 4/1/5/2;
+    background-image: url(../images/home7.jpeg);
 }
 .part9{
     grid-area: 5/2/6/4;
+    background-image: url(../images/home8.jpeg);
 }
 h2{
     text-transform: uppercase;
@@ -48,3 +65,305 @@ a:hover{
     text-decoration-color: red;
     text-decoration-thickness: 10px;
 }
+section:first-child:hover{
+    background: -moz-radial-gradient( Beige 30%, rgba(126, 98, 98, 0.596) 30%, Beige 60%, Brown 30%)
+}
+main{
+    background-color: antiquewhite;
+    padding-top: 30px;
+}
+section:last-child{
+    background-image: url(../images/homepage1.jpeg);
+}
+
+
+}
+
+
+section:last-child:hover{
+    background: linear-gradient(orange 30%, navy 30% , navy 60%, orange 30%)
+    
+}
+.part2:hover{
+    background: -moz-radial-gradient(maroon 30%, orange 30%,  orange 60%, maroon 30%);
+}
+.part3:hover{
+    background: -moz-linear-gradient(black 30%, orange 30%,  orange 60%, black 30%);
+}
+.part4:hover{
+    background: -moz-linear-gradient(teal 30%, navy 30%, navy 60%, teal 30% );
+}
+.part8:hover{
+    background: -moz-linear-gradient( purple 30%, blue 30%, blue 60%, purple 30%);
+}
+.part6:hover{
+    background: -moz-linear-gradient(  Blue 30%, Turquoise 60%, Beige 30%);
+}
+.part5:hover{
+    background: -moz-linear-gradient(  Pink 30%,HotPink 30%, HotPink 60%, Maroon 30%);
+}
+.part7:hover{
+    background: -moz-linear-gradient( Navy 30%, Yellow 30%, navy 60%, Beige 30%);
+}
+}
+
+
+@media (max-width: 1100px){
+
+
+    body{
+        max-width: 70%;
+        margin: 0 auto;
+    }
+    main{
+        display: grid;
+        grid-template-columns: repeat( 3, 1fr);
+         grid-template-rows: repeat( 6, 20% 20% 30% 20% 20% 30%); 
+    }
+    section{
+        border: 5px ridge red;
+    
+    }
+    .part1{ 
+        grid-area: 1/1/4/3;
+    } 
+    .part2{
+        grid-area: 6/1/7/4;
+    }
+    .part3{
+        grid-area: 5/1/6/2;
+    }
+    .part4{
+        grid-area: 4/2/5/4;
+    }
+    .part5{
+        grid-area: 2/3/3/4;
+    }
+    .part6{
+        grid-area: 1/3/2/4;
+    }
+    .part7{
+        grid-area: 3/3/4/4;
+    }
+    .part8{
+        grid-area: 4/1/5/2;
+    }
+    .part9{
+        grid-area: 5/2/6/4;
+    }
+    h2{
+        text-transform: uppercase;
+        text-align: center;
+    }
+    a{
+        text-decoration: none;
+        color: seagreen;
+    }
+    a:hover{
+        text-decoration-line: underline;
+        text-decoration-color: red;
+        text-decoration-thickness: 10px;
+    }
+    section:first-child:hover{
+        background: -moz-radial-gradient( Beige 30%, rgba(126, 98, 98, 0.596) 30%, Beige 60%, Brown 30%)
+    }
+    main{
+        background-color: antiquewhite;
+        padding-top: 30px;
+    }
+    section:last-child{
+        background-image: url(../images/homepage1.jpeg);
+    }
+    .part2{
+        background-image: url(../images/homepage2.jpeg)
+    }
+    .part3{
+        background-image: url(../images/homepage3.jpeg)
+    }
+    .part4{
+        background-image: url(../images/home4.jpeg)
+    }
+    
+    .part5{
+        background-image: url(../images/home4.jpeg)
+    }
+    
+    .part6{
+        background-image: url(../images/home5.jpeg)
+    }
+    
+    .part7{
+        background-image: url(../images/home6.jpeg)
+    
+    }
+    .part8{
+        background-image: url(../images/home7.jpeg)
+    
+    }
+    .part9{
+        background-image: url(../images/home8.jpeg)
+    
+    }
+    .part1{
+        background-image: url(../images/home9.jpeg)
+    }
+    }
+    
+    
+    section:last-child:hover{
+        background: linear-gradient(orange 30%, navy 30% , navy 60%, orange 30%)
+        
+    }
+    .part2:hover{
+        background: -moz-radial-gradient(maroon 30%, orange 30%,  orange 60%, maroon 30%);
+    }
+    .part3:hover{
+        background: -moz-linear-gradient(black 30%, orange 30%,  orange 60%, black 30%);
+    }
+    .part4:hover{
+        background: -moz-linear-gradient(teal 30%, navy 30%, navy 60%, teal 30% );
+    }
+    .part8:hover{
+        background: -moz-linear-gradient( purple 30%, blue 30%, blue 60%, purple 30%);
+    }
+    .part6:hover{
+        background: -moz-linear-gradient(  Blue 30%, Turquoise 60%, Beige 30%);
+    }
+    .part5:hover{
+        background: -moz-linear-gradient(  Pink 30%,HotPink 30%, HotPink 60%, Maroon 30%);
+    }
+    .part7:hover{
+        background: -moz-linear-gradient( Navy 30%, Yellow 30%, navy 60%, Beige 30%);
+    }
+    }
+
+
+    @media (max-width: 768px){
+
+
+        body{
+            max-width: 70%;
+            margin: 0 auto;
+        }
+        main{
+            display: grid;
+            grid-template-columns: repeat( 3, 1fr);
+             grid-template-rows: repeat( 6, 20% 20% 30% 20% 20% 30%); 
+        }
+        section{
+            border: 5px ridge red;
+        
+        }
+        .part1{ 
+            grid-area: 1/1/4/3;
+        } 
+        .part2{
+            grid-area: 6/1/7/4;
+        }
+        .part3{
+            grid-area: 5/1/6/2;
+        }
+        .part4{
+            grid-area: 4/2/5/4;
+        }
+        .part5{
+            grid-area: 2/3/3/4;
+        }
+        .part6{
+            grid-area: 1/3/2/4;
+        }
+        .part7{
+            grid-area: 3/3/4/4;
+        }
+        .part8{
+            grid-area: 4/1/5/2;
+        }
+        .part9{
+            grid-area: 5/2/6/4;
+        }
+        h2{
+            text-transform: uppercase;
+            text-align: center;
+        }
+        a{
+            text-decoration: none;
+            color: seagreen;
+        }
+        a:hover{
+            text-decoration-line: underline;
+            text-decoration-color: red;
+            text-decoration-thickness: 10px;
+        }
+        section:first-child:hover{
+            background: -moz-radial-gradient( Beige 30%, rgba(126, 98, 98, 0.596) 30%, Beige 60%, Brown 30%)
+        }
+        main{
+            background-color: antiquewhite;
+            padding-top: 30px;
+        }
+        section:last-child{
+            background-image: url(../images/homepage1.jpeg);
+        }
+        .part2{
+            background-image: url(../images/homepage2.jpeg)
+        }
+        .part3{
+            background-image: url(../images/homepage3.jpeg)
+        }
+        .part4{
+            background-image: url(../images/home4.jpeg)
+        }
+        
+        .part5{
+            background-image: url(../images/home4.jpeg)
+        }
+        
+        .part6{
+            background-image: url(../images/home5.jpeg)
+        }
+        
+        .part7{
+            background-image: url(../images/home6.jpeg)
+        
+        }
+        .part8{
+            background-image: url(../images/home7.jpeg)
+        
+        }
+        .part9{
+            background-image: url(../images/home8.jpeg)
+        
+        }
+        .part1{
+            background-image: url(../images/home9.jpeg)
+        }
+        }
+        
+        
+        section:last-child:hover{
+            background: linear-gradient(orange 30%, navy 30% , navy 60%, orange 30%)
+            
+        }
+        .part2:hover{
+            background: -moz-radial-gradient(maroon 30%, orange 30%,  orange 60%, maroon 30%);
+        }
+        .part3:hover{
+            background: -moz-linear-gradient(black 30%, orange 30%,  orange 60%, black 30%);
+        }
+        .part4:hover{
+            background: -moz-linear-gradient(teal 30%, navy 30%, navy 60%, teal 30% );
+        }
+        .part8:hover{
+            background: -moz-linear-gradient( purple 30%, blue 30%, blue 60%, purple 30%);
+        }
+        .part6:hover{
+            background: -moz-linear-gradient(  Blue 30%, Turquoise 60%, Beige 30%);
+        }
+        .part5:hover{
+            background: -moz-linear-gradient(  Pink 30%,HotPink 30%, HotPink 60%, Maroon 30%);
+        }
+        .part7:hover{
+            background: -moz-linear-gradient( Navy 30%, Yellow 30%, navy 60%, Beige 30%);
+        }
+        }
+
