--- a/files/style/form.css
+++ b/files/style/form.css
@@ -1,3 +1,4 @@
+ @media (max-width: 1400px){ 
 body{
     max-width: 65%;
     margin: 0 auto;
@@ -23,7 +24,6 @@ fieldset{
     margin-bottom: 4%;
 }
 legend{
-    
     text-transform: uppercase;
     color:  #FFFF;
     background-color: #414141;
@@ -36,7 +36,7 @@ span{
 
     display: block;
     width: 90%; 
-    padding: 0.7em 0.4em; 
+    padding: 0.5em 0.4em; 
     border-radius: 20px;
     background-color: #fff;
 }
@@ -125,3 +125,266 @@ footer i{
 i:hover{
     color:#fff;
 }
+
+
+@media (max-width: 1100px){
+    body{
+        max-width: 65%;
+        margin: 0 auto;
+         background-color: #FFF; 
+    }
+    h2{
+        color: #0f0f0f;
+        text-transform: uppercase;
+        text-align: center;
+        font-family:sans-serif;
+    }
+    label{
+        text-transform: capitalize;
+        color: #000;
+        margin-bottom: 10px;
+        text-transform: capitalize;
+    }
+    fieldset{
+        border-radius: 10px;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 4%;
+        margin-bottom: 4%;
+    }
+    legend{
+        
+        text-transform: uppercase;
+        color:  #FFFF;
+        background-color: #414141;
+        padding: 0.5em 0.4em;
+        border: #000000;
+        text-align: center;
+        border-radius: 10px;
+    }
+    span{
+    
+        display: block;
+        width: 90%; 
+        padding: 0.7em 0.4em; 
+        border-radius: 20px;
+        background-color: #fff;
+    }
+    .pi input{
+        outline: none; 
+        border: none; 
+        color: #000; 
+       
+    } 
+    .pi div{
+        display: block;
+        width: 40%;
+        margin-bottom: 0.5em;
+        color: #000; 
+        
+        
+    }
+    span:focus{
+        box-shadow: 4px 3px 10px #c2c2c2;
+    }
+    .ms{
+        padding-right: 2.6em; 
+        
+    }
+    form > div{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: end;
+        margin-top: 10px;
+        padding: 1.5% 2%;
+        margin-right: 5%;
+    }
+    form > div input{
+        padding: 0.6em 1em;
+        font-size: 24px;
+        margin-left: 0.7em;
+        border-radius: 20px;
+    }
+    form > div input:hover{
+        color: #000;
+        background-color: #aba8a9;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-family:sans-serif;
+    }
+    form{
+        background-color:#dddddd;
+        box-shadow: 10px 10px 30px 6px #000 ;
+        font-family: sans-serif ;
+        
+    }
+    .sio div{
+        display: block;
+        width: 40%;
+        margin-bottom: 0.5em;
+    }
+    .sio input{
+        display: block;
+        width: 90%;
+        padding: 0.7em 0.4em;
+        border-radius: 20px;
+        outline: none;
+        border: none;
+        color: #000;
+    }
+    .sio input:focus{
+        box-shadow: 4px 3px 10px #000;
+    }
+    .pi i{
+        font-size: 20px;
+        width: 10%;
+        margin-left: 10%;
+        color: rgba(158, 155, 155, 0.295);
+    }
+    footer{
+        margin-top: 2em;
+        text-align: end;
+    }
+    footer i{
+        font-size: 30px;
+        padding-right: 10px;
+        color: #aba8a9;
+        padding: 0.7em 0.4em;
+        margin-left: 4%;
+    }
+    i:hover{
+        color:#fff;
+    }
+    }
+
+
+@media (max-width: 730px){
+    body{
+        max-width: 65%;
+        margin: 0 auto;
+         background-color: #FFF; 
+    }
+    h2{
+        color: #0f0f0f;
+        text-transform: uppercase;
+        text-align: center;
+        font-family:sans-serif;
+    }
+    label{
+        text-transform: capitalize;
+        color: #000;
+        margin-bottom: 10px;
+        text-transform: capitalize;
+    }
+    fieldset{
+        border-radius: 10px;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 4%;
+        margin-bottom: 4%;
+    }
+    legend{
+        
+        text-transform: uppercase;
+        color:  #FFFF;
+        background-color: #414141;
+        padding: 0.5em 0.4em;
+        border: #000000;
+        text-align: center;
+        border-radius: 10px;
+    }
+    span{
+    
+        display: block;
+        width: 100%; 
+        padding: 0.7em 0.4em; 
+        border-radius: 20px;
+        background-color: #fff;
+    }
+    .pi input{
+        outline: none; 
+        border: none; 
+        color: #000; 
+       
+    } 
+    .pi div{
+        display: block;
+        width: 90%;
+        margin-bottom: 0.5em;
+        color: #000; 
+        
+        
+    }
+    span:focus{
+        box-shadow: 4px 3px 10px #c2c2c2;
+    }
+    .ms{
+        padding-right: 2.6em; 
+        
+    }
+    form > div{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: end;
+        margin-top: 10px;
+        padding: 1.5% 2%;
+        margin-right: 5%;
+    }
+    form > div input{
+        padding: 0.6em 1em;
+        font-size: 24px;
+        margin-left: 0.7em;
+        border-radius: 20px;
+    }
+    form > div input:hover{
+        color: #000;
+        background-color: #aba8a9;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-family:sans-serif;
+    }
+    form{
+        background-color:#dddddd;
+        box-shadow: 10px 10px 30px 6px #000 ;
+        font-family: sans-serif ;
+        
+    }
+    .sio div{
+        display: block;
+        width: 100%;
+        margin-bottom: 0.5em;
+    }
+    .sio input{
+        display: block;
+        width: 90%;
+        padding: 0.7em 0.4em;
+        border-radius: 20px;
+        outline: none;
+        border: none;
+        color: #000;
+    }
+    .sio input:focus{
+        box-shadow: 4px 3px 10px #000;
+    }
+    .pi i{
+        font-size: 20px;
+        width: 10%;
+        margin-left: 30%;
+        margin-top: 10%;
+        color: rgba(158, 155, 155, 0.295);
+    }
+    footer{
+        margin-top: 2em;
+        text-align: end;
+    }
+    footer i{
+        font-size: 30px;
+        padding-right: 10px;
+        color: #aba8a9;
+        padding: 0.7em 0.4em;
+        margin-left: 4%;
+    }
+    i:hover{
+        color:#fff;
+    }
+    }
